[package]
name = "tasktrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
rusqlite = "0.28"
dirs = "4.0"
clap = {version = "3.2", features = ["derive"]}
chrono = "0.4"
bdays = "0.1"
chronoutil = "0.2"
num-traits = "0.2"
prettytable-rs = "0.8"

[build-dependencies]
clap_complete = "3.2"
chrono = "0.4"
clap = {version = "3.2", features = ["derive"]}